--- a/my_book/_config.yml
+++ b/my_book/_config.yml
@@ -8,4 +8,4 @@
 title                       : Книга-хуига  # The title of the book. Will be placed in the left navbar.
 author                      : Семён Горбатый  # The author of the book
 copyright                   : "2020"  # Copyright year to be placed in the footer
-logo                        : logo.png  # A path to the book logo
+logo                        : figures/logo.png  # A path to the book logo
