--- a/my_book/_config.yml
+++ b/my_book/_config.yml
@@ -11,4 +11,10 @@ copyright                   : "2020"  # Copyright year to be placed in the foote
 logo                        : figures/logo.png  # A path to the book logo
 
 html:
-  navbar_number_sections    : True  # Add a number to each section in your left navbar
+  navbar_number_sections    : true  # Add a number to each section in your left navbar
+  home_page_in_navbar       : true  # Whether to include your home page in the left Navigation Bar
+  use_repository_button     : true  # Whether to add an "Repository" button to pages. If `true`, repository information in repository: must be filled in
+  use_issues_button         : true # Whether to add an "Open issue" button to pages. If `true`, repository information in repository: must be filled in
+  
+repository:
+  url                       : https://github.com/barking-dog/test  # The URL to your book's repository
