--- a/my_book/_config.yml
+++ b/my_book/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-# title                       : Книга-хуига  # The title of the book. Will be placed in the left navbar.
+title                       : "" #Книга-хуига  # The title of the book. Will be placed in the left navbar.
 author                      : Семён Горбатый  # The author of the book
 copyright                   : "2020"  # Copyright year to be placed in the footer
 logo                        : figures/logo.png  # A path to the book logo
